# sickml

./: '  Cargo.toml  LICENSE  README.md  matrix_100x100.txt  ̈́
benches/: bench.rs  my_benchmark.rs
src/: heap_vector.rs  inline_vector.rs  lib.rs  main.rs  math_vector.rs  matrix.rs  vector.rs
src/heap_vector/: into_vec.rs  iterator.rs  math.rs  math_ops.rs
src/inline_vector/: into_array.rs  iterator.rs  math.rs  math_ops.rs
src/m_matrix/: math.rs  math_operators.rs  operators.rs
src/matrix/: into_2d_vector.rs  iterator.rs  math.rs  math_operators.rs  operators.rs  transpose.rs
src/vector/: heap_vector.rs  inline_vector.rs  into_array.rs  into_vector_data.rs  iterator.rs  math.rs  math_ops.rs
src/vector/heap_vector/: into_vec.rs  math_ops.rs
src/vector/inline_vector/: into_array.rs
src/vector/stack_vector/: math_ops.rs
